adding instrumention to react-select components

--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -56,6 +56,13 @@
   }
 }
 
+.labeled-select {
+  width: 100%;
+  > div {
+    font-weight: normal;
+  }
+}
+
 .table-terra {
   thead {
     background: #f4f4f4;
