ui/ux tweaks re: demo comments

--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -34,13 +34,17 @@
               Then <%= link_to "click here".html_safe, "#{generate_manifest_study_url(@study)}" %> for the file_supplemental_info.tsv containing file supplementary information (units, protocols, etc...)
             <% elsif @study.public? && !@user_embargoed || current_user.admin? %>
               <p class="lead">To download all files using <code>curl</code>, click the button below to get the download command:</p>
-              <p class="lead command-container" id="command-container-all">
-                <%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe,
+              <p class="lead command-container text-center" id="command-container-all">
+                <%= link_to "<i class='fas fa-download'></i> Download all study data".html_safe,
                             '#/', class: 'btn btn-default get-download-command', id: 'get-download-command__all' %></p>
+
               <% if @directories.any? %>
-                <p class="lead command-container" id="command-container-nodirs">
-                  <%= link_to "<i class='fas fa-download'></i> Get download command for study files only (no folders)".html_safe,
+                <p class="lead command-container text-center" id="command-container-nodirs">
+                  <%= link_to "<i class='fas fa-download'></i> Download main study files only".html_safe,
                               '#/', class: 'btn btn-default get-download-command', id: 'get-download-command__nodirs' %></p>
+              <% end %>
+
+              <% if @directories.any? %>
                 <p class="lead">To download all data files in a specific folder, use the following commands:</p>
                 <table class="table table-condensed table-striped">
                   <thead>
