adding mtx file bundle support

--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -88,6 +88,15 @@
   }
 }
 
+.sub-form {
+  padding: 1em;
+  margin-top: 1em;
+  border-left: 2px solid lighten($action-color, 30%);
+  background: lighten($action-color, 50%);
+  border-radius: 5px;
+  h5 { margin-bottom: 1em;}
+}
+
 .padded {
   padding: 1em;
 }
