--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -33,7 +33,7 @@
 			font-weight: normal;
 			margin-right: 0.2em;
 		}
-		.correlation { 
+		.correlation {
 			font-weight: normal
 		}
 	}
@@ -50,7 +50,7 @@
 .explore-tab-content {
 	background: #fff;
 	flex-grow: 1;
-	
+
 	button.action {
 		background: #fff;
 	}
@@ -160,3 +160,64 @@
 #gene-list-upload {
 	display: none;
 }
+
+/** Start of styles for custom Plotly scatter plot legend */
+.plot-container.plotly {
+  float: left;
+}
+
+.scatter-graph {
+  margin-left: 40px;
+}
+
+.scatter-legend {
+  display: inline-block;
+  width: 250px;
+  background-color: rgb(230, 238, 246);
+}
+
+.scatter-legend-name {
+  margin: 5px 0 10px 5px;
+  font-weight: bold;
+}
+
+.scatter-legend-row {
+  height: 25px;
+  cursor: pointer;
+  background-color: #FFF;
+  border: 1px solid #DDD;
+  border-radius: 3px;
+  margin-top: 3px;
+}
+
+/** Like hover state for React Select */
+.scatter-legend-row:hover {
+  border-color: #AAB;
+}
+
+.scatter-legend-row:hover {
+  border-color: #AAB;
+}
+
+.scatter-legend-icon {
+  width: 23px;
+  height: 23px;
+  margin: 0 10px 0 -1px;
+  float: left;
+  border-radius: 2px 0 0 2px
+}
+
+.scatter-legend-entry {
+  position: relative;
+  top: 2px;
+}
+
+.filtered {
+  .scatter-legend-row {
+    opacity: 0.3;
+  }
+  .scatter-legend-row.selected {
+    opacity: 1;
+  }
+}
+/** End of styles for custom Plotly scatter plot legend */
