--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -791,3 +791,8 @@ figcaption.ck-editor__editable {
 .min-width-100 {
   min-width: 100%;
 }
+
+.file-upload-download-container {
+  display: flex;
+  align-items: center;
+}
