adding sequence file upload capability

--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -121,10 +121,15 @@
   font-weight: normal;
 }
 
-.position-fixed {
-  width: 24%;
-  position: fixed;
+.upload-wizard-react {
+  .position-fixed {
+    width: 24%;
+    position: fixed;
+    max-height: 85vh;
+    overflow-y: auto;
+  }
 }
+
 
 .upload-wizard-react {
   h4 {
