--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -792,7 +792,7 @@ figcaption.ck-editor__editable {
   min-width: 100%;
 }
 
-.file-upload-download-container {
+.flexbox-align-center {
   display: flex;
   align-items: center;
 }
