adding form validation

--- a/app/javascript/styles/_colors.scss
+++ b/app/javascript/styles/_colors.scss
@@ -7,4 +7,4 @@ $action-color: #4d72aa;
 $warning-background-color: #feeed8;
 $warning-icon-color: #f6901b;
 
-$danger-color: #a94442
+$danger-color: rgb(219, 50, 20);
