--- a/app/views/site/_main_banner_content.html.erb
+++ b/app/views/site/_main_banner_content.html.erb
@@ -1,8 +1,9 @@
 <div class="mask" id="main-banner">
   <% if FeatureAnnouncement.published_features? %>
-    <%= scp_link_to "New Features <i class='fas fa-star'></i>".html_safe, latest_feature_announcements_path,
-                    class: 'btn btn-warning', id: 'latest-features-btn', data: { toggle: 'tooltip', placement: 'left' },
-                    title: 'Learn about new Single Cell Portal features!' %>
+    <%= scp_link_to "<span class='badge'>#{FeatureAnnouncement.published.count}</span> " \
+                    "#{pluralize_without_count(FeatureAnnouncement.published.count, "New Feature")}".html_safe,
+                    latest_feature_announcements_path, class: 'btn btn-warning', id: 'latest-features-btn',
+                    data: { toggle: 'tooltip', placement: 'left' }, title: 'Learn about new Single Cell Portal features!' %>
   <% end %>
   <% if @selected_branding_group.present? %>
     <% if @selected_branding_group.banner_image.file %>
