--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -28,6 +28,10 @@
   }
 }
 
+.tooltip-wide.popover {
+  max-width: 400px;
+}
+
 .full-height-modal {
   .modal-dialog {
     height: 100vh !important;
