--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -165,7 +165,7 @@
             $(`#${containerId}`).remove() // Remove any prior notice
             $('#metadata_form').append(`<div id="${containerId}"></div>`)
             // Run client-side metadata file validation
-            const results = await window.SCP.validateFile(file, fileType)
+            const results = await window.SCP.validateFileContent(file, fileType)
             validationErrors = results.errors
             summary = results.summary
           <% end %>
