adding archived attribute & feed

--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -244,5 +244,9 @@
   position: absolute;
   top: 245px;
   right: 15px;
-  z-index: 9999;
+  z-index: 500;
+}
+
+.right-margin-10 {
+  margin-right: 10px;
 }
