--- a/app/views/feature_announcements/index.html.erb
+++ b/app/views/feature_announcements/index.html.erb
@@ -1,6 +1,7 @@
 <h1>
   Feature Announcements
-  <%= link_to "View Feed", latest_feature_announcements_path, class: 'pull-right btn btn-default' %>
+  <%= link_to "View Archived", archived_feature_announcements_path, class: 'pull-right btn btn-default' %>
+  <%= link_to "View Latest", latest_feature_announcements_path, class: 'pull-right btn btn-success right-margin-10' %>
 </h1>
 <div class="row">
   <div class="col-md-12">
@@ -14,6 +15,7 @@
               <th>Content</th>
               <th>Link</th>
               <th>Published</th>
+              <th>Section</th>
               <th class="actions">Actions</th>
             </tr>
           </thead>
@@ -26,6 +28,13 @@
               <td><%= link_to feature_announcement.doc_link, feature_announcement.doc_link,
                               target: :_blank, rel: 'noopener noreferrer' %></td>
               <td><%= get_boolean_label feature_announcement.published %></td>
+              <td>
+                <% if feature_announcement.archived %>
+                  <span class="label label-default">archived</span>
+                <% else %>
+                  <span class="label label-success">latest</span>
+                <% end %>
+              </td>
               <td>
                 <%= link_to "<i class='fas fa-edit'></i> Edit".html_safe, edit_feature_announcement_path(feature_announcement),
                             class: 'btn btn-xs btn-primary' %>
