--- a/app/views/feature_announcements/view_announcement.html.erb
+++ b/app/views/feature_announcements/view_announcement.html.erb
@@ -1,5 +1,6 @@
 <h2>
-  <%= scp_link_to '<<', latest_feature_announcements_path %> <%= @feature_announcement.title %>
+  <%= scp_link_to '<<', @feature_announcement.archived? ? archived_feature_announcements_path : latest_feature_announcements_path %>
+  <%= @feature_announcement.title %>
   <%= link_to "More Info <i class='fas fa-external-link-alt'></i>".html_safe, @feature_announcement.doc_link,
               class: 'btn btn-default pull-right', target: :_blank, rel: 'noopener noreferrer' %>
 </h2>
