updating tests for archived attribute

--- a/app/views/feature_announcements/_feature_announcement_list.html.erb
+++ b/app/views/feature_announcements/_feature_announcement_list.html.erb
@@ -1,6 +1,6 @@
-<ul class="collections-list" id="latest-features">
+<ul class="collections-list" id="features-list">
   <% feature_announcements.each do |feature_announcement| %>
-    <li id="<%= feature_announcement.slug %>">
+    <li id="<%= feature_announcement.slug %>" class="feature-announcement-entry">
       <div class="row">
         <div class="col-md-12">
           <h3>
