Add roughly working "Display all" checkbox

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -171,7 +171,7 @@
 .scatter-legend {
   display: inline-block;
   width: 250px;
-  background-color: rgb(230, 238, 246);
+  background-color: #E5EEF7;
 }
 
 .scatter-legend-name {
