--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -156,7 +156,7 @@
 					fileUploading = true;
 					var that = this;
           const file = data.files[0]
-          const fileType = 'metadata'
+          const fileType = 'Metadata'
           const containerId = `${fileType}-metadata-container`
 
           let validationErrors = []
