--- a/app/views/studies/_initialize_ordinations_form.html.erb
+++ b/app/views/studies/_initialize_ordinations_form.html.erb
@@ -157,7 +157,7 @@
           var that = this;
 
           const file = data.files[0]
-          const fileType = 'cluster'
+          const fileType = 'Cluster'
           const containerId = `${ordsFormSelector.slice(1)}-container`
 
           let validationErrors = []
