Rewrite logic for "Display all" to fit "Show all" and "Hide all"

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -210,11 +210,16 @@
   top: 5px;
 }
 
-.filtered {
+.scatter-legend-row {
+  opacity: 0.3;
+}
+
+.scatter-legend-row.shown {
+  opacity: 1;
+}
+
+.unfiltered {
   .scatter-legend-row {
-    opacity: 0.3;
-  }
-  .scatter-legend-row.selected {
     opacity: 1;
   }
 }
