combining feed into single page, adding history tracking

--- a/app/views/feature_announcements/_form.html.erb
+++ b/app/views/feature_announcements/_form.html.erb
@@ -27,7 +27,7 @@
     </div>
     <div class="col-md-1">
       <%= form.label :archived, "Archived <i class='fas fa-question-circle'></i>".html_safe,
-                     data: { toggle: 'tooltip' }, title: "Check to move this to the 'Archived' list" %><br />
+                     data: { toggle: 'tooltip' }, title: "Check to move this to the 'Archives' list" %><br />
       <%= form.check_box :archived, checked: feature_announcement.archived %>
     </div>
   </div>
