--- a/app/views/feature_announcements/latest.html.erb
+++ b/app/views/feature_announcements/latest.html.erb
@@ -1,27 +1,17 @@
 <h1>
   <%= link_to "Home", site_path %> / Latest Features
-  <% if FeatureAnnouncement.archived_features? %>
-    <%= link_to "Archives", archived_feature_announcements_path, class: 'pull-right btn btn-default' %>
-  <% end %>
 </h1>
 <div class="row">
   <div class="col-md-12">
-    <%= render partial: 'feature_announcement_list', locals: { feature_announcements: @feature_announcements } %>
-    <div class="col-md-offset-4 col-md-4">
-      <p class="text-center">
-        <%= scp_link_to "<i class='fas fa-angle-double-left'></i>".html_safe, latest_feature_announcements_path,
-                        class: 'btn btn-xs btn-default' %>
-        <%= scp_link_to "<i class='fas fa-angle-left'></i>".html_safe,
-                        latest_feature_announcements_path(page: @feature_announcements.previous_page),
-                        class: 'btn btn-xs btn-default', disabled: @feature_announcements.previous_page.nil? %>
-        Page <%= params[:page] ? params[:page] : 1 %> of <%= @feature_announcements.total_pages %>
-        <%= scp_link_to "<i class='fas fa-angle-right'></i>".html_safe,
-                        latest_feature_announcements_path(page: @feature_announcements.next_page),
-                        class: 'btn btn-xs btn-default', disabled: @feature_announcements.next_page.nil? %>
-        <%= scp_link_to "<i class='fas fa-angle-double-right'></i>".html_safe,
-                        latest_feature_announcements_path(page: @feature_announcements.total_pages),
-                        class: 'btn btn-xs btn-default', disabled: @feature_announcements.next_page.nil? %>
-      </p>
-    </div>
+    <%= render partial: 'feature_announcement_list', locals: { feature_announcements: @latest } %>
+  </div>
+</div>
+<hr />
+<h1>
+  Archives
+</h1>
+<div class="row">
+  <div class="col-md-12">
+    <%= render partial: 'feature_announcement_list', locals: { feature_announcements: @archived } %>
   </div>
 </div>
