upload wizard UX polish

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -1,6 +1,7 @@
 @import './_brand.scss';
 @import './_global.scss';
 @import './_forms.scss';
+@import './_notifications.scss';
 @import './_spin.scss';
 @import './_search.scss';
 @import './_keywordSearch.scss';
@@ -10,3 +11,4 @@
 @import './_explore.scss';
 @import './_relatedGenesIdeogram.scss';
 @import './_inferCNVIdeogram.scss';
+@import './_uploadWizard.scss';
