Move checkbox below cluster name, add notes in CSS

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -159,7 +159,12 @@
 	display: none;
 }
 
-/** Start of styles for custom Plotly scatter plot legend */
+/**
+  Start of styles for custom Plotly scatter plot legend
+
+  Visual design specification:
+  https://www.sketch.com/s/a225bef6-e4f3-40c9-936e-dd391c943383
+*/
 .plot-container.plotly {
   float: left;
 }
@@ -191,10 +196,7 @@
 /** Like hover state for React Select */
 .scatter-legend-row:hover {
   border-color: #AAB;
-}
-
-.scatter-legend-row:hover {
-  border-color: #AAB;
+  // box-shadow: 0px 0px 4px 1px black; // Used in spec, but unwieldy
 }
 
 .scatter-legend-icon {
@@ -226,5 +228,17 @@
   top: 3px;
   left: 8px;
   font-weight: 600;
+}
+
+.scatter-legend {
+  label {
+    position: relative;
+    top: -1px;
+    margin-left: 3px;
+  }
+
+  input {
+    margin-left: 3px;
+  }
 }
 /** End of styles for custom Plotly scatter plot legend */
