addressing PR comments

--- a/app/views/feature_announcements/_feature_announcement_list.html.erb
+++ b/app/views/feature_announcements/_feature_announcement_list.html.erb
@@ -1,4 +1,4 @@
-<ul class="collections-list" id="features-list">
+<ul class="collections-list">
   <% feature_announcements.each do |feature_announcement| %>
     <li id="<%= feature_announcement.slug %>" class="feature-announcement-entry">
       <div class="row">
