--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -169,13 +169,13 @@
 }
 
 .scatter-legend {
-  display: inline-block;
-  width: 250px;
-  background-color: #E5EEF7;
+  float: right;
+  width: 260px;
+  margin-right: 10px;
 }
 
 .scatter-legend-head {
-  margin: 5px 5px 10px 5px;
+  margin: 5px 2px 10px 2px;
 }
 
 .scatter-legend-name {
@@ -189,6 +189,7 @@
 
 .stateful-link.disabled {
   color: rgb(197, 210, 227);
+  cursor: default;
 }
 
 .scatter-legend-row {
