--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -20,10 +20,13 @@
   .badge {
     background: #fff;
     color: $action-color;
-    margin-right: 1em;
     border-radius: 1em;
     padding: 0.5em 0.75em;
     cursor: pointer;
+  }
+  .step-number {
+    min-width: 25px;
+    margin-right: 1em;
   }
   li.active {
     background: lighten($action-color, 40%);
@@ -44,6 +47,12 @@
   }
   ul {
     list-style: none;
+  }
+}
+
+.upload-form-header {
+  > div:last-of-type {
+    margin-left: auto;
   }
 }
 
