--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -172,10 +172,11 @@
   float: right;
   width: 260px;
   margin-right: 10px;
+  background-color: #E5EEF7;
 }
 
 .scatter-legend-head {
-  margin: 5px 2px 10px 2px;
+  margin: 5px 10px 10px 10px;
 }
 
 .scatter-legend-name {
