adding expandable file forms to upload wizard

--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -39,6 +39,15 @@
   border-radius: 3px;
 }
 
+.terra-tertiary-btn {
+  color: $action-color;
+  border: none;
+  background: none;
+  text-decoration: underline;
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
 
 .btn-icon {
   background: none;
