--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -51,6 +51,14 @@
 }
 
 .upload-form-header {
+  h5 {
+    margin-right: 1em;
+  }
+  &.expanded {
+    padding-bottom: 1em;
+    margin-bottom: 0.5em;
+    border-bottom: 1px solid #ddd;
+  }
   .expander {
     padding: 0em 0.75em;
     color: $action-color;
