Handle more legend resizing use cases

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -171,6 +171,7 @@
 .scatter-legend {
   float: right;
   width: 260px;
+  margin-top: 10px;
   margin-right: 10px;
   background-color: #E5EEF7;
 }
