--- a/app/views/studies/_expression_file_fields.html.erb
+++ b/app/views/studies/_expression_file_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group row">
   <div class="col-sm-12">
-  
+
     <% if !study_file.is_raw_counts_file? %>
 
     <%= f.label :y_axis_label, 'Expression Axis Label' %>&nbsp;<span class="fas fa-question-circle" data-toggle="tooltip" data-placement="right" title="This is displayed as the axis label for box & scatter plots showing expression values.  This label is global to all expression values.<%= @study.has_expression_label? ? ' Please use the study default options form to update this value.' : '' %>"></span> <br />
@@ -24,13 +24,13 @@
   <% current_values = f.object.associated_matrix_files(:raw)&.map { |sf| { label: sf.name, value: sf.id.to_s } } %>
 
   // render the raw counts association select; if replace is true, allows swapping out units dropdown in raw counts form
-  updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= User.feature_flag_for_instance(current_user, 'raw_counts_required_backend') %>)
+  updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= current_user.feature_flag_for('raw_counts_required_backend') %>)
 
   $('#study-file-<%= f.object.id.to_s %>').on('updateRawCountsSelect', function() {
-    updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= User.feature_flag_for_instance(current_user, 'raw_counts_required_backend') %>)
+    updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= current_user.feature_flag_for('raw_counts_required_backend') %>)
   })
 
   $('#study-file-<%= f.object.id.to_s %>').on('change', '.is_raw_counts_true, .is_raw_counts_false', function() {
-    updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= User.feature_flag_for_instance(current_user, 'raw_counts_required_backend') %>)
+    updateRawCountsAssnSelect('#study-file-<%= f.object.id.to_s %>', <%= current_values.to_json.html_safe %>, <%= current_user.feature_flag_for('raw_counts_required_backend') %>)
   })
 </script>
