--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.hidden_field :_id, value: study_file._id %>
   <%= hidden_field_tag :selector, '#metadata_form' %>
   <%= hidden_field_tag :partial, 'initialize_metadata_form' %>
-  <% convention_required = User.feature_flag_for_instance(current_user, 'convention_required') %>
+  <% convention_required = current_user.feature_flag_for('convention_required') %>
 	<div class="form-group row">
 		<div class="col-sm-4">
 			<%= f.label :name %><br />
@@ -161,7 +161,7 @@
 
           let validationErrors = []
           let summary = ''
-          <% if User.feature_flag_for_instance(current_user, 'clientside_validation') %>
+          <% if current_user.feature_flag_for('clientside_validation') %>
             $(`#${containerId}`).remove() // Remove any prior notice
             $('#metadata_form').append(`<div id="${containerId}"></div>`)
             // Run client-side metadata file validation
