--- a/app/views/admin_configurations/edit_user.html.erb
+++ b/app/views/admin_configurations/edit_user.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing <em><%= @user.email %></em> roles</h1>
 
-<%= form_for(@user, url: update_user_path(@user.id), html: {class: 'form'}) do |f| %>
+<%= nested_form_for(@user, url: update_user_path(@user.id), html: {class: 'form'}) do |f| %>
   <% if @user.errors.any? %>
     <div class="bs-callout bs-callout-danger">
       <h4><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h4>
@@ -31,27 +31,10 @@
     <div class="col-md-12">
       <label>Feature flags</label>
     </div>
-    <div class="form-group row">
-      <div class="col-md-12">
-        <% @user.feature_flags_with_defaults.sort_by { |key, _| key }.each do |key, _| %>
-          <% @default_flag =  FeatureFlag.find_by(name: key) %>
-          <div class="row <%= @user.feature_flags.key?(key) ? 'highlight' : '' %>">
-            <div class="col-md-3 text-right">
-              <label><%= key %>:</label>
-            </div>
-            <div class="col-md-2">
-              <select name="feature_flag_<%= key %>" class="form-control">
-                <option value="0" <%= @user.feature_flags[key] == false ? 'selected' : '' %>>False</option>
-                <option value="1" <%= @user.feature_flags[key] == true ? 'selected' : '' %>>True</option>
-                <option value="-" <%= @user.feature_flags.key?(key) ? '' : 'selected' %>>Default (<%= @default_flag.default_value %>)</option>
-              </select>
-            </div>
-            <div class="col-md-6">
-              <%= @default_flag.description %>
-            </div>
-          </div>
-        <% end %>
-      </div>
+    <div class="col-md-12">
+      <%= f.fields_for :feature_flag_options, FeatureFlaggable.build_feature_flag_options(@user) do |ff_form| %>
+        <%= render partial: 'feature_flag_options/feature_flag_option_fields', locals: { f: ff_form } %>
+      <% end %>
     </div>
   </div>
   <div class="form-group row">
