--- a/app/views/feature_flag_options/_feature_flag_option_fields.html.erb
+++ b/app/views/feature_flag_options/_feature_flag_option_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="row <%= f.object.new_record? ? '' : 'highlight' %>">
+<div class="row <%= f.object.new_record? ? '' : 'highlight' %> feature-flag-options-field">
   <%= f.hidden_field :feature_flaggable_type, value: f.object.feature_flaggable_type %>
   <%= f.hidden_field :feature_flaggable_id, value: f.object.feature_flaggable_id %>
   <div class="col-xs-3 text-right">
