adding FeatureFlag overview, FeatureFlagOption index, UX tweaks

--- a/app/views/feature_flag_options/edit.html.erb
+++ b/app/views/feature_flag_options/edit.html.erb
@@ -14,3 +14,6 @@
     </div>
   </div>
 <% end %>
+<p>
+  <%= link_to "<i class='fas fa-chevron-left'></i> Back".html_safe, feature_flag_options_path, class: 'btn btn-warning' %>
+</p>
