--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -5,7 +5,7 @@
 
       <% if @selected_branding_group.nil? %>
         <div class="home-nav" id="collections-tab">
-          <a href="/single_cell/collections" class="btn btn-primary">
+          <a href="/single_cell/collections" class="btn btn-primary" data-toggle="tooltip" title="Groups of studies with a common research theme">
             Browse Collections
           </a>
         </div>
